--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <!--sec1 end -->
 
 
-  <div class="container-fluid sec3 ">
+  <div class="container-fluid sec3 py-4 ">
     <h1 class="fw-bold h1 text-light text-center">Our courses</h1>
 
     <div class="container ">
